[package]
name = "ctrader-fix"
version = "0.3.6"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
edition = "2021"
description = "A rust implementation of the cTrader FIX API."
license = "MIT"
readme = "README.md"
# documentation = "https://docs.rs/"
repository = "https://github.com/geminik23/ctrader-fix"
keywords = ["ctrade", "fix", "api", "finance", "trading"]



[dependencies]
async-std = {version="1.12", features = ["attributes", "unstable", "tokio1"]}
async-macros = "2.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_enum = "0.6"
log = "0.4"
thiserror = "1.0"
uuid = {version = "1.3", features = ["v4", "fast-rng"]}


[dev-dependencies]
dotenv = "0.15"
env_logger = "0.10"


[lib]
name = "cfix"


