[package]
name = "ctrader-fix"
version = "0.4.11"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
edition = "2021"
description = "A rust implementation of the cTrader FIX API."
license = "MIT"
readme = "README.md"
# documentation = "https://docs.rs/"
repository = "https://github.com/geminik23/ctrader-fix"
keywords = ["ctrade", "fix", "api", "finance", "trading"]



[dependencies]
async-std = {version="1.12", features = ["unstable"], opitonal = true}
async-macros = "2.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_enum = "0.6"
log = "0.4"
thiserror = "1.0"
uuid = {version = "1.3", features = ["v4", "fast-rng"]}


[features]
default = ["async_std_default"]
tokio1 = ["async_std_tokio1"]
tokio02 = ["async_std_tokio2"]
tokio03 = ["async_std_tokio3"]

async_std_default = ["async-std/unstable"]
async_std_tokio1 = ["async-std/unstable", "async-std/tokio1"]
async_std_tokio2 = ["async-std/unstable", "async-std/tokio02"]
async_std_tokio3 = ["async-std/unstable", "async-std/tokio03"]

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.10"
async-std = {version="1.12", features = ["attributes"]}


[lib]
name = "cfix"
